# PostSharing

./: .gitignore
backend/: .env  .gitignore  README.md  db.py  main.py  pyproject.toml  requirements.txt
backend/lib/: token.py  websocket_manager.py
backend/middlewares/: auth.py
backend/migration/: env.py
backend/migration/versions/: 01bba17ee9c6_add_friend_table.py  2e8661ad2509_add_avatar_url_and_back_ground_url.py  3ccce5f55d5d_recreate_database.py  6a4e7b0f11f1_change_emote_table.py  a521c4f2f0a0_add_message_table.py  ca53f1e6b4c8_add_noti_table.py  d008837f6b77_add_table_refreshtoken_2.py  ed6e7d448230_add_friendship_foreign_keys.py
backend/models/: comments.py  emotes.py  friends.py  messages.py  notifications.py  posts.py  token.py  users.py
backend/routers/: auth.py  comment.py  emote.py  friend.py  message.py  notification.py  post.py  search.py  upload.py  user.py  websocket.py
frontend/: .prettierrc  eslint.config.mjs  package-lock.json  package.json
frontend/src/: middleware.tsx
frontend/src/app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/src/components/: auth-first.tsx  comment.tsx  friend.tsx  image-croper.tsx  interact.tsx  lazy-post.tsx  navigation-menu.tsx  option.tsx  post.tsx  profile-me-button.tsx  skeletons.tsx  theme-switcher.tsx  top-menu.tsx  user.tsx
frontend/src/context/: authContext.tsx  chatContext.tsx  loadingContext.tsx  notiContext.tsx  themeContext.tsx  websocketContext.tsx
frontend/src/lib/: api.ts  cropimage.ts  upload.ts  utils.ts  websocket.ts
frontend/src/type/: type.tsx
(+25 files in other folders)
