[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.2",
    "cloudinary>=1.44.1",
    "fastapi[standard]>=0.115.13",
    "passlib[bcrypt]>=1.7.4",
    "python-jose>=3.5.0",
    "sqlmodel>=0.0.24",
]
